added html markup

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
   src="https://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
   crossorigin="anonymous"></script>
-</head>
+</head>	
 <body>
-
+	<div id="logindiv">
+		<select id="lang">
+			<option value="en">English</option>
+			<option value="es">Español</option>
+		</select>
+		<input type="button" value="login" id="login">
+	</div>
+	<h1 id="greeting"></h1>
+	<script src="Greeter.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
